Fix spacing in empty ResponsiveLayout elements

--- a/app/layout/ResponsiveLayout.scss
+++ b/app/layout/ResponsiveLayout.scss
@@ -3,7 +3,6 @@
   text-align: center;
   padding: 0 1em;
   > span {
-    display: inline-block;
     width: 100%;
     text-align: left;
   }
